# statx-sample

./: Cargo.toml  README.md
scripts/: generate_random_files.sh
src/: main.rs
